--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^4.10.1",
+    "csv-writer": "^1.6.0",
     "dotenv": "^16.0.3",
     "node-schedule": "^2.1.0",
     "signale": "^1.4.0",
